# TiroX

./: README.md  pyproject.toml
.gitea/workflows/: build-apk.yml
.github/workflows/: build-apk.yml  build-ios.yml
src/: main.py
src/components/: AnimatedButton.py  AnimatedIcon.py  Chart.py  DetailCard.py  HistoryCard.py  LastResultCard.py  NotificationCard.py  RangeCard.py  SettingCardSection.py  StylishButton.py  StylishDialog.py  StylishSnackBar.py
src/core/: RegisterManager.py
src/utils/: formater.py  generate_qrcode.py  get_color_by_value.py  get_colors_by_seed.py  get_icon_by_value.py  get_text_by_value.py
src/views/: About.py  Detail.py  Home.py  NewRegister.py  Notification.py  __init__.py
