[project]
name = "tirox-app"
version = "0.1.0"
description = "Tirox-App is a mobile app for the TiroX Device"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "MasterA5", email = "agustin090806090806@gmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "flet-routing>=1.1.0",
  "flet_barcode_scanner @git+https://github.com/MasterA5/flet-barcode-scanner",
  "pillow==10.0.0",
  "qrcode>=7.4.2",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.tiroxapp"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "TiroX App"

# company name to display in about app dialogs
company = "TiroX"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2026 by TiroX"

[tool.flet.app]
path = "src"
exclude = [
    "venv",
    "venv_*",
    ".venv",
    ".git",
    "__pycache__",
    "*.db",
    "test_*.py",
    ".github/*",
    ".gitea/*",
]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    "ruff>=0.15.20",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}

[tool.ruff]
line-length = 88
indent-width = 4

exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "env",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
